added integrationTests